# Decarbonization

./: .dockerignore  .env.example  .gitignore  CLEANUP_COMPLETED.md  CLEANUP_PLAN.md  Climatiq api calls .md  Climatiq-testing.xlsx  Decarbonization_Problem_Statement.md  FINAL_IMPLEMENTATION_ROADMAP.md  FRONTEND_INTEGRATION_GUIDE.md  Hero moto data.csv  MEETING_DEMO.md  OPTIMIZED_IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  README_TESTING.md  Researched.md  SCHEMAS_REFERENCE.md  SOLUTION_SUMMARY.md  START_HERE.md  TEST_GUIDE.md  backend_api_commands.sh  carbon_data.csv  carbon_report_55bfcb18-85d4-43fa-81ed-e03eda1e88f6.html  carbon_report_af14788f-0b4e-4788-8bdc-5417f674f47e.html  debug_auth.py  demo.sh  demo_e2e.py  demo_results.json  docker-compose.test.yml  docker-compose.yml  e2e_test.sh  extract_docx.py  logs.txt  logs_csv.txt  quick_demo.ps1  registration_test.html  run_dry_run.sh  run_tests_in_docker.ps1  semantic_test.csv  (+22 more)
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test_integration.py
backend/alembic/: env.py
backend/alembic/versions/: 135bec871877_add_regional_factors_and_ai_verdict_.py  abd6d9b7f406_initial_schema.py  bb59ec217272_increase_current_reduction_pct_precision.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  archetype_config.py  authorization.py  celery_app.py  config.py  errors.py  security.py
backend/app/crud/: __init__.py  (+3 more)
backend/tests/: __init__.py  conftest.py  test_all_activities.csv  test_anomalies_1.csv  test_anomalies_2.csv  test_anomalies_3.csv  test_auditor_e2e.sh  test_data_comprehensive.csv  unique_test_data.csv
(+347 files in other folders)
