[project]
name = "decarbonization-backend"
version = "1.0.0"
description = "AI-Powered Carbon Accounting and Decarbonization Platform - Backend"
requires-python = ">=3.11,<3.12"
dependencies = [
    # FastAPI Core
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    # Database
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    # Async HTTP Client
    "httpx==0.26.0",
    "tenacity==8.2.3",
    "groq==0.4.2",
    # Redis (for CacheManager)
    "redis==5.0.1",
    # Authentication & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    # Utilities
    "python-dotenv==1.0.0",
    "email-validator==2.1.0",
    "pandas>=2.2.0",
    "openpyxl==3.1.2",
    "numpy>=1.26.3",
    "matplotlib>=3.8.2",
    "reportlab==4.0.9",
    "python-docx==1.1.0",
    "requests==2.31.0",
    # Platform management
    "nodeenv>=1.8.0",
    "google-genai>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "nodeenv>=1.8.0",
]

[project.scripts]
backend = "app.scripts.backend:main"
frontend = "app.scripts.frontend:main"

[tool.uv]
package = true
dev-dependencies = []

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
